# fabrik-frontend

./: pyproject.toml  pyproject.yml
src/fabrik_frontend/: api.py
