[project]
name = "fabrik-frontend"
version = "0.1.0"
description = "Desktop frontend for the Factory Demo REST API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fabrik_frontend"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
